[metadata]
name = clearstack
summary = Tool for set up an OpenStack environment
description-file =
    README.rst
author = Alberto Murillo, Julio Montes, Obed Muñoz, Victor Morales
home-page = 
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    clearstack

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    clearstack = clearstack.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[pbr]
warnerrors = True

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = clearstack/locale
domain = clearstack

[update_catalog]
domain = clearstack
output_dir = clearstack/locale
input_file = clearstack/locale/clearstack.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = clearstack/locale/clearstack.pot

[wheel]
universal = 1
